# pucmg_iaam

./: .gitignore  1_coletar_e_preprocessar.py  Dockerfile  docker-compose.yml  pyproject.toml
assets/: importar_noticias.sh  preparar_python.sh  processar.py  salvando.csv  teste spacy.py  teste.py  teste_2.py  teste_feed.py  tmp_consulta.csv
coleta/: Dockerfile  coletar_e_preprocessar.py
containeres/batch/: Dockerfile
containeres/notebook/: Dockerfile
containers/batch/: Dockerfile  agendamento (em construção).py
containers/mongodb/: Dockerfile
containers/notebook/: Dockerfile
containers/notebook/volume/: analise_exploratoria.ipynb
containers/notebook/volume/.ipynb_checkpoints/: analise_exploratoria-checkpoint.ipynb
core/: a_coletar_preprocessar.py  a_fontes.csv  b1_preparar_texto.py  requirements.txt
src/_common/: util.json  util.py
src/a_coletar_preprocessar/: coletar_preprocessar.py  coletor_preprocessador.py
src/b_limpar/: analise_exploratoria.ipynb  limpador.py  remover_conteudo.json
src/b_limpar/.ipynb_checkpoints/: analise_exploratoria-checkpoint.ipynb
src/b_preparar/: analise_exploratoria.html  analise_exploratoria.ipynb  preparador.py  remover_conteudo.json
src/b_preparar_vetorizar/: preparar_texto.py  remover_conteudo.json
src/b_vetorizar/: analise_vetorizacao.ipynb  config.json  config_vetorizacao.json  vetorizador.py
src/b_vetorizar/.ipynb_checkpoints/: analise_vetorizacao-checkpoint.ipynb
src/c_clusterizar/: analise_clusterizacao.ipynb  resultado_clusterizacao_textual.csv
src/c_clusterizar_por_texto/: analise_clusterizacao_textual.ipynb  clusterizador_textual.py  config_clusterizacao_textual.json  otimizador_clusterizacao_textual.py  resultado_clusterizacao_textual.csv  teste_resultado.csv  teste_resultado_2.csv  valores.csv
src/d_clusterizar_por_tempo/: analise_clusterizacao_temporal.ipynb  clusterizador_temporal.py  config_clusterizacao_temporal.json  resultado_clusterizacao_temporal.json
src/e_apresentar/: executar_tudo.py  rest.py
