[tool.poetry]
name = "pucmg_iaam"
version = "0.1.0"
description = ""
authors = ["Edson Sales da Rocha <esredson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
feedparser = "^6.0.10"
pymongo = "^4.2.0"
pytz = "^2022.1"
nltk = "^3.7"
bs4 = "^0.0.1"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
