[tool.poetry]
name = "pucmg_iaam"
version = "0.1.0"
description = ""
authors = ["Edson Sales da Rocha <esredson@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
feedparser = "^6.0.10"
pymongo = "^4.2.0"
pytz = "^2022.1"
nltk = "^3.7"
bs4 = "^0.0.1"
Unidecode = "^1.3.4"
matplotlib = "^3.5.2"
tensorflow-hub = "^0.12.0"
sentence-transformers = "^2.2.2"
tensorflow-io-gcs-filesystem = "^0.25.0"
tensorflow = "^2.9.1"
llvmlite = "^0.39.0"
numba = "^0.56.0"
numpy = "^1.22.4"
gensim = "^4.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_script = "b_preparar_vetorizar.vetorizar_texto:teste"